# Parallelism

./: .gitignore  README.md
1lab/: CMakeLists.txt  Makefile  README.md  main.cpp
2lab/: .~lock.Table.xlsx#  CMakeLists.txt  Makefile  README.md  Table.xlsx  dgemv.c  info.txt  inmain  integ.c  lin  lin.cpp  main  maindgem  maininteg  t.c
3lab/: Makefile  task_1  task_1.cpp  task_2  task_2.cpp  test  test.cpp  test_2.cpp
4lab/: task.py
lab5/: main.py
lab6/cpu/: cpu.cpp  multi  serial
lab6/gpu/: gpu  gpu.cpp  my_profile_report.nsys-rep
lab7/: Makefile  main.cpp  my_profile_report_nvtx.nsys-rep
